# mtfind

./: CMakeLists.txt  fileDataChunk.cc  fileReader.cc  fileReader.h  main.cc  patternMatchProcessor.cc  patternMatchProcessor.h  patternSearchManager.cc  patternSearchManager.h  test.cc  tests.cc
core/: CMakeLists.txt  commonTypes.h  fileDataChunk.cc  fileDataChunk.h  fileReader.cc  fileReader.h  mtfind.cc  patternMatchProcessor.cc  patternMatchProcessor.h  patternSearchManager.cc  patternSearchManager.h
include/: Exception.h  Mtfind.h
include/Utils/: FileGuard.h  ParallelDataStorage.h  RabinKarpSearch.h  ToString.h
